--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^6.7.3"
+    "nodemailer": "^6.7.3",
+    "random-number": "0.0.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
